--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,113 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Sesija 13</title>
 
-        <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="css/style.css" rel="stylesheet" type="text/css"/>
-        <link href="css/responsive.css" rel="stylesheet" type="text/css"/>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Pet Care</title>
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/responsive.css" rel="stylesheet" type="text/css" />
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-    </head>
-    <body>
-        <header>
-            <div class="upper-navigation clearfix" style="background-color: #f5f5f5;">
-                <div class="container">
-                    <p class="pull-left">Leave a message:<a href="mailto:info@example.com">info@example.com</a></p>
-                    <ul class="social list-inline pull-right">
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                        <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
-                        <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                    </ul>
-                </div>
+</head>
+
+<body>
+    <header>
+        <div class="upper-navigation clearfix" style="background-color: #f5f5f5;">
+            <div class="colors clearfix">
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
-            <div class="mid-navigation">
-                <div class="container clearfix">
-                    <a href="#">
-                        <img src="img/logo.png" alt=""/>
-                    </a>
-                    <div class="pull-right">
-                        <div class="info">
+            <div class="container">
+                <p>Leave a message:<a href="mailto:info@example.com"> info@example.com</a></p>
+                <ul class="social list-inline">
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="mid-navigation">
+            <div class="container clearfix">
+                <a href="#" class="logo">
+                    <img src="img/logo.png" alt="" />
+                </a>
+                <div class="cart-menu">
+                  <button class="info-open"><span class="fa fa-inbox"></span></button>
+                  <a class="cart" href="#">
+                    <span>10</span>
+                      <img src="img/cart.png" alt="" />
+                  </a>
+                </div>
+                <div class="pull-right">
+                    <div class="info">
                         <div class="location">
-                            <img src="">
-                            <p>our location</p>
-                            <p>50- Design Street, Texas</p>
+                            <span></span>
+                            <div class="text">
+                              <p>Our Location</p>
+                              <p>50- Design Street, Texas</p>
+                            </div>
                         </div>
                         <div class="hours">
-                            <img src="">
-                            <p>Mon - Sat</p>
-                            <p>8 am - 10 pm</p>
+                            <span></span>
+                            <div class="text">
+                              <p>Mon - Sat</p>
+                              <p>8 am - 10 pm</p>
+                            </div>
                         </div>
                         <div class="phone">
-                            <img src="">
-                            <p>Call Us</p>
-                            <p>+1 (0) 234 56 789</p>
+                            <span></span>
+                            <div class="text">
+                              <p>Call Us</p>
+                              <p>+1 (0) 234 56 789</p>
+                            </div>
                         </div>
-                    </div>
-                    <a class="cart" href="#">
-                        <img src="img/cart.png" alt=""/>
-                    </a>
                     </div>
                 </div>
             </div>
-            <nav class="navbar navbar-default">
-                <div class="container">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        </div>
+        <nav class="navbar navbar-default" style="background-color: #1377c5;">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                    </div>
+                </div>
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav text-uppercase">
-                            <li class="active"><a href="#">home <span class="sr-only">(current)</span></a></li>
-                            <li><a href="#">about us</a></li>
-                            <li><a href="#">services</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">shop <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">pages</a></li>
-                            <li><a href="#">blog</a></li>
-                            <li><a href="#">contact us</a></li>
-                            <li><a href="#">get na appointment</a></li>
-                        </ul>
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-            </nav>
-        </header>
-        <main></main>
-        <footer></footer>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav text-uppercase">
+                        <li class="active"><a href="#">home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">services</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">shop <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">pets list</a></li>
+                                <li><a href="#">product details</a></li>
+                                <li><a href="#">place order</a></li>
+                                <li><a href="#">my cart</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">pages</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="#">contact us</a></li>
+                    </ul>
+                </div><!-- .navbar-collapse -->
+                <a href="#" class="appointment text-uppercase">get na appointment</a>
+            </div><!-- container -->
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-    </body>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+</body>
+
 </html>
