--- a/public_html/index.html
+++ b/public_html/index.html
@@ -122,7 +122,7 @@
                         <li><a href="#">contact us</a></li>
                     </ul>
                 </div><!-- .navbar-collapse -->
-                <a href="#" class="appointment text-uppercase">get na appointment</a>
+                <a href="#" class="appointment text-uppercase">get an appointment</a>
             </div><!-- container -->
         </nav>
     </header>
