--- a/public_html/index.html
+++ b/public_html/index.html
@@ -122,13 +122,52 @@
                         <li><a href="#">contact us</a></li>
                     </ul>
                 </div><!-- .navbar-collapse -->
-                <a href="#" class="appointment text-uppercase">get an appointment</a>
+                <a href="#" class="appointment text-uppercase" data-toggle="modal" data-target="#myModal">get an appointment</a>
             </div><!-- container -->
         </nav>
     </header>
     <main></main>
     <footer></footer>
-
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+              <form class="get-appointment" action="index.html" method="post">
+                <div class="row">
+                  <div class="col-sm-3">
+                      <input type="text" name="name" value="" class="form-control" placeholder="First Name">
+                      <p class="name-error errors"></p>
+                  </div>
+                  <div class="col-sm-3">
+                    <input type="text" name="last-name" value="" class="form-control" placeholder="Last Name">
+                    <p class="last-name-error errors"></p>
+                  </div>
+                  <div class="col-sm-3">
+                    <input type="email" name="email" value="" class="form-control" placeholder="Email">
+                    <p class="email-error errors"></p>
+                  </div>
+                  <div class="col-sm-3">
+                    <input type="tel" name="phone" value="" class="form-control" placeholder="Phone Number">
+                    <p class="phone-error errors"></p>
+                  </div>
+                </div>
+                <div class=row>
+                  <div class="col-lg-12">
+                    <textarea name="comment" rows="8" cols="80" class="form-control" placeholder="Anything we should know about your pet?"></textarea>
+                  </div>
+                  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 text-center">
+                    <button type="submit" name="button" class="btn btn-success text-uppercase">get an appointment</button>
+                  </div>
+                </div>
+                <p class="form-feedback text-center"></p>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
