--- a/public_html/index.html
+++ b/public_html/index.html
@@ -466,6 +466,9 @@
                         <div class="col-sm-6 col-md-3">
                             <article>
                                 <div class="cover">
+                                    <div class="cover-img">
+                                        <img src="img/whychooseus-01.jpg" alt=""/>
+                                    </div>
                                     <div class="article-icon article-icon-01"></div>
                                     <h3>Best In The Industry</h3>
                                     <p>
@@ -480,6 +483,9 @@
                         <div class="col-sm-6 col-md-3">
                             <article>
                                 <div class="cover">
+                                    <div class="cover-img">
+                                        <img src="img/whychooseus-01.jpg" alt=""/>
+                                    </div>
                                     <div class="article-icon article-icon-02"></div>
                                     <h3>Customer Support</h3>
                                     <p>
@@ -493,6 +499,9 @@
                         <div class="col-sm-6 col-md-3">
                             <article>
                                 <div class="cover">
+                                    <div class="cover-img">
+                                        <img src="img/whychooseus-01.jpg" alt=""/>
+                                    </div>
                                     <div class="article-icon article-icon-03"></div>
                                     <h3>Special Care On Pets</h3>
                                     <p>
@@ -507,6 +516,9 @@
                         <div class="col-sm-6 col-md-3">
                             <article>
                                 <div class="cover">
+                                    <div class="cover-img">
+                                        <img src="img/whychooseus-01.jpg" alt=""/>
+                                    </div>
                                     <div class="article-icon article-icon-04"></div>
                                     <h3>Best Quality Products</h3>
                                     <p>
